--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next": "12.1.2",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.52.2",
+    "stripe": "^9.6.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.38",
+    "@types/react": "^17.0.0",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.7.2"
   }
 }
