--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.1.2",
+    "next-auth": "^4.3.4",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-icons": "^4.4.0",
@@ -17,6 +18,7 @@
     "stripe": "^9.6.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.38",
     "@types/react": "^17.0.0",
     "eslint": "8.16.0",
