--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "faunadb": "^4.8.0",
     "next": "12.1.2",
     "next-auth": "^4.3.4",
     "react": "17.0.0",
