--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.54.1",
+    "axios": "^1.4.0",
     "faunadb": "^4.8.0",
     "next": "12.1.2",
     "next-auth": "^4.3.4",
